--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watchify": "^3.7.0"
   },
   "scripts": {
+    "firstrun": "mkdir public dist public/css public/js; npm start",
     "start": "npm-run-all --parallel server:localhost listen:*",
     "build": "npm-run-all --parallel build:*",
     "server:localhost": "live-server ./public --port=3000",
@@ -33,11 +34,10 @@
     "build:html": "jade --obj '{dev:false}' jade/views -o dist/"
   },
   "dependencies": {
-    "rx-lite": "^4.0.7",
-    "vue": "latest",
+    "rx-lite": "latest",
     "vue-rx": "^1.0.0",
-    "vue-resource": "^0.7.0",
-    "vue-router": "^0.7.10"
+    "vue": "latest",
+    "vue-router": "latest"
   },
   "browserify": {
     "transform": [
